Allows posting for register form.

--- a/frontend-service/register.html
+++ b/frontend-service/register.html
@@ -159,7 +159,7 @@ function submitJson() {
 	 var data = JSON.stringify( obj );
 
 	 $.ajax({
-            url: 'http://54.169.143.230:5000/echo',
+            url: 'http://54.169.143.230:5000/submitform',
             type: 'post',
             dataType: 'json',
             contentType: 'application/json',
