--- a/frontend-service/charts.html
+++ b/frontend-service/charts.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin - Charts</title>
+    <title>New Talent Registration</title>
 
     <!-- Bootstrap core CSS-->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,6 +22,8 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="all" href="css/switchery.min.css">
+
 
   </head>
 
@@ -35,17 +37,6 @@
         <i class="fas fa-bars"></i>
       </button>
 
-      <!-- Navbar Search -->
-      <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
-          <div class="input-group-append">
-            <button class="btn btn-primary" type="button">
-              <i class="fas fa-search"></i>
-            </button>
-          </div>
-        </div>
-      </form>
 
       <!-- Navbar -->
       <ul class="navbar-nav ml-auto ml-md-0">
@@ -129,57 +120,119 @@
       <div id="content-wrapper">
 
         <div class="container-fluid">
+          <form id = "form" meothod = "post" onsubmit="return false">
 
-          <!-- Breadcrumbs-->
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-              <a href="#">Dashboard</a>
-            </li>
-            <li class="breadcrumb-item active">Charts</li>
-          </ol>
-
-          <!-- Area Chart Example-->
-          <div class="card mb-3">
-            <div class="card-header">
-              <i class="fas fa-chart-area"></i>
-              Area Chart Example</div>
-            <div class="card-body">
-              <canvas id="myAreaChart" width="100%" height="30"></canvas>
+            <div class="col-4">
+              <label>
+                First Name
+                <input placeholder="What is your first name?" id="firstName" name="firstName" tabindex="1">
+              </label>
             </div>
-            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-          </div>
 
-          <div class="row">
-            <div class="col-lg-8">
-              <div class="card mb-3">
-                <div class="card-header">
-                  <i class="fas fa-chart-bar"></i>
-                  Bar Chart Example</div>
-                <div class="card-body">
-                  <canvas id="myBarChart" width="100%" height="50"></canvas>
-                </div>
-                <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-              </div>
+            <div class="col-4">
+              <label>
+                Family Name
+                <input placeholder="What is your family name?" id="familyName" name="familyName" tabindex="2">
+              </label>
             </div>
-            <div class="col-lg-4">
-              <div class="card mb-3">
-                <div class="card-header">
-                  <i class="fas fa-chart-pie"></i>
-                  Pie Chart Example</div>
-                <div class="card-body">
-                  <canvas id="myPieChart" width="100%" height="100"></canvas>
-                </div>
-                <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-              </div>
+
+            <div class="col-4">
+              <label>
+                Gender
+                <select name = "gender" tabindex="3">
+                  <option>Male</option>
+                  <option>Female</option>
+                  <option>Preferred not to disclose</option>
+                </select>
+              </label>
             </div>
-          </div>
 
-          <p class="small text-center text-muted my-5">
-            <em>More chart examples coming soon...</em>
-          </p>
+            <div class="col-4">
+              <label>
+                Age
+                <input placeholder="How old are you now?" id="age" name="age" tabindex="4">
+              </label>
+            </div>
 
+            <div class="col-3">
+              <label>
+                NRIC
+                <input placeholder="What is your NRIC?" id="nric" name="nric" tabindex="5">
+              </label>
+            </div>
+
+
+            <div class="col-3">
+              <label>
+                Address
+                <input placeholder="We will help you find jobs with short travel time!" id="address" name="address" tabindex="6">
+              </label>
+            </div>
+
+            <div class="col-3">
+              <label>
+                Time Availability
+                <select name = "timeAvailability" tabindex="7">
+                  <option value = "weekdays">Weekdays</option>
+                  <option value = "weekends">Weekends</option>
+                  <option value = "nightShifts">Night Shits</option>
+                </select>
+              </label>
+            </div>
+
+
+            <div class="col-3">
+              <label>
+                Strength
+                <select name = "strength" tabindex="7">
+                  <option value = "motivated">Motivated</option>
+                  <option value = "hardworking">Hard-working</option>
+                  <option value = "friendly">Friendly</option>
+                </select>
+              </label>
+            </div>
+
+            <div class="col-3">
+              <label>
+                Past Working Experience
+                <input placeholder="Let us know your past working experience!" id="experience" name="experience" tabindex="9">
+              </label>
+            </div>
+
+            <div class="col-3">
+              <label>
+                Interested Industry
+                <select name = "industries" tabindex="10">
+                  <option value = "retail">Retail</option>
+                  <option value = "f&b">F&B</option>
+                  <option value = "hospitality">Hospitality</option>
+                </select>
+              </label>
+            </div>
+
+
+            <div class="col-3">
+              <label>
+                Tagline
+                <input placeholder="A tagline helps us to remember you!" id="tagline" name="tagline" tabindex="9">
+              </label>
+            </div>
+
+            <div class="col-3">
+              <label>Assistance Needed
+                <input placeholder="Do you need any special assistance from us?" id="assistance" name="assistance" tabindex="10">
+              </label>
+            </div>
+
+            <div class="col-submit">
+              <button class="submitbtn" onClick="submitJson()">Join the Talent Pool!</button>
+            </div>
+
+          </form>
         </div>
         <!-- /.container-fluid -->
+
+
 
         <!-- Sticky Footer -->
         <footer class="sticky-footer">
@@ -191,6 +244,13 @@
         </footer>
 
       </div>
+
+      <!-- Bootstrap core JavaScript-->
+      <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+      <!-- Core plugin JavaScript-->
+      <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
       <!-- /.content-wrapper -->
 
     </div>
@@ -227,17 +287,42 @@
     <!-- Core plugin JavaScript-->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Page level plugin JavaScript-->
-    <script src="vendor/chart.js/Chart.min.js"></script>
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin.min.js"></script>
 
-    <!-- Demo scripts for this page-->
-    <script src="js/demo/chart-area-demo.js"></script>
-    <script src="js/demo/chart-bar-demo.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script>
 
   </body>
+
+  <script>
+    function submitJson() {
+      var obj = {};
+            var elements = form.querySelectorAll( "input, select" );
+            for( var i = 0; i < elements.length; ++i ) {
+                var element = elements[i];
+                var name = element.name;
+                var value = element.value;
+
+                if( name ) {
+                    obj[ name ] = value;
+                }
+            }
+
+         var data = JSON.stringify( obj );
+
+         $.ajax({
+                url: 'http://54.169.143.230:5000/submitform',
+                type: 'post',
+                dataType: 'json',
+                data: data,
+                contentType: 'application/json',
+                success: function (data) {
+                    $('#target').html(data.msg);
+                },
+                data: JSON.stringify(obj)
+
+            });
+    }
+  </script>
 
 </html>
