--- a/frontend-service/charts.html
+++ b/frontend-service/charts.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>New Talent Registration</title>
+    <title>SB Admin - Charts</title>
 
     <!-- Bootstrap core CSS-->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,8 +22,18 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="all" href="css/switchery.min.css">
+	
+	
 
+
+    <!-- Custom styles for this template-->
+    <link type="text/css" media="all" href="css/sb-registration.css" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" media="all" href="css/switchery.min.css">
+    <script type="text/javascript" src="js/switchery.min.js"></script>
+	
+	
+	
 
   </head>
 
@@ -31,12 +41,23 @@
 
     <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
-      <a class="navbar-brand mr-1" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand mr-1" href="index.html">MINDS Hi! Job Online Portal</a>
 
       <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
         <i class="fas fa-bars"></i>
       </button>
 
+      <!-- Navbar Search -->
+      <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-primary" type="button">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
+        </div>
+      </form>
 
       <!-- Navbar -->
       <ul class="navbar-nav ml-auto ml-md-0">
@@ -83,174 +104,85 @@
 
       <!-- Sidebar -->
       <ul class="sidebar navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">
+        <li class="nav-item active">
+          <a class="nav-link" href="mainpage.html">
             <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Dashboard</span>
+            <span>Main Page</span>
           </a>
+        </li>
+		<li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-fw fa-folder"></i>
+            <span>Job Coach Login</span>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+            <h6 class="dropdown-header">Login Screens:</h6>
+            <a class="dropdown-item" href="loginclients.html">Login Job Coach</a>
+            <a class="dropdown-item" href="register.html">Register</a>
+            <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
+    
+          </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-fw fa-folder"></i>
-            <span>Pages</span>
+            <span>Clients Login</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="pagesDropdown">
             <h6 class="dropdown-header">Login Screens:</h6>
-            <a class="dropdown-item" href="login.html">Login</a>
+            <a class="dropdown-item" href="login.html">Login Clients</a>
             <a class="dropdown-item" href="register.html">Register</a>
             <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
-            <div class="dropdown-divider"></div>
-            <h6 class="dropdown-header">Other Pages:</h6>
-            <a class="dropdown-item" href="404.html">404 Page</a>
-            <a class="dropdown-item" href="blank.html">Blank Page</a>
           </div>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="charts.html">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Charts</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="tables.html">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Tables</span></a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-fw fa-folder"></i>
+            <span>Employers Login</span>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+            <h6 class="dropdown-header">Login Screens:</h6>
+            <a class="dropdown-item" href="loginemployers.html">Login Employers</a>
+            <a class="dropdown-item" href="register.html">Register</a>
+            <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
+          </div>
         </li>
       </ul>
 
       <div id="content-wrapper">
 
-        <div class="container-fluid">
-          <form id = "form" meothod = "post" onsubmit="return false">
 
-            <div class="col-4">
-              <label>
-                First Name
-                <input placeholder="What is your first name?" id="firstName" name="firstName" tabindex="1">
-              </label>
-            </div>
-
-            <div class="col-4">
-              <label>
-                Family Name
-                <input placeholder="What is your family name?" id="familyName" name="familyName" tabindex="2">
-              </label>
-            </div>
-
-            <div class="col-4">
-              <label>
-                Gender
-                <select name = "gender" tabindex="3">
-                  <option>Male</option>
-                  <option>Female</option>
-                  <option>Preferred not to disclose</option>
-                </select>
-              </label>
-            </div>
-
-            <div class="col-4">
-              <label>
-                Age
-                <input placeholder="How old are you now?" id="age" name="age" tabindex="4">
-              </label>
-            </div>
-
-            <div class="col-3">
-              <label>
-                NRIC
-                <input placeholder="What is your NRIC?" id="nric" name="nric" tabindex="5">
-              </label>
-            </div>
-
-
-            <div class="col-3">
-              <label>
-                Address
-                <input placeholder="We will help you find jobs with short travel time!" id="address" name="address" tabindex="6">
-              </label>
-            </div>
-
-            <div class="col-3">
-              <label>
-                Time Availability
-                <select name = "timeAvailability" tabindex="7">
-                  <option value = "weekdays">Weekdays</option>
-                  <option value = "weekends">Weekends</option>
-                  <option value = "nightShifts">Night Shits</option>
-                </select>
-              </label>
-            </div>
-
-
-            <div class="col-3">
-              <label>
-                Strength
-                <select name = "strength" tabindex="7">
-                  <option value = "motivated">Motivated</option>
-                  <option value = "hardworking">Hard-working</option>
-                  <option value = "friendly">Friendly</option>
-                </select>
-              </label>
-            </div>
-
-            <div class="col-3">
-              <label>
-                Past Working Experience
-                <input placeholder="Let us know your past working experience!" id="experience" name="experience" tabindex="9">
-              </label>
-            </div>
-
-            <div class="col-3">
-              <label>
-                Interested Industry
-                <select name = "industries" tabindex="10">
-                  <option value = "retail">Retail</option>
-                  <option value = "f&b">F&B</option>
-                  <option value = "hospitality">Hospitality</option>
-                </select>
-              </label>
-            </div>
-
-
-            <div class="col-3">
-              <label>
-                Tagline
-                <input placeholder="A tagline helps us to remember you!" id="tagline" name="tagline" tabindex="9">
-              </label>
-            </div>
-
-            <div class="col-3">
-              <label>Assistance Needed
-                <input placeholder="Do you need any special assistance from us?" id="assistance" name="assistance" tabindex="10">
-              </label>
-            </div>
-
-            <div class="col-submit">
-              <button class="submitbtn" onClick="submitJson()">Join the Talent Pool!</button>
-            </div>
-
-          </form>
-        </div>
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
         <!-- /.container-fluid -->
-
-
 
         <!-- Sticky Footer -->
         <footer class="sticky-footer">
           <div class="container my-auto">
             <div class="copyright text-center my-auto">
-              <span>Copyright © Your Website 2018</span>
+              <span>Copyright © MINDS Website 2018</span>
             </div>
           </div>
         </footer>
 
       </div>
-
-      <!-- Bootstrap core JavaScript-->
-      <script src="vendor/jquery/jquery.min.js"></script>
-      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-      <!-- Core plugin JavaScript-->
-      <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
       <!-- /.content-wrapper -->
 
     </div>
@@ -287,42 +219,17 @@
     <!-- Core plugin JavaScript-->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
+    <!-- Page level plugin JavaScript-->
+    <script src="vendor/chart.js/Chart.min.js"></script>
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin.min.js"></script>
 
+    <!-- Demo scripts for this page-->
+    <script src="js/demo/chart-area-demo.js"></script>
+    <script src="js/demo/chart-bar-demo.js"></script>
+    <script src="js/demo/chart-pie-demo.js"></script>
 
   </body>
-
-  <script>
-    function submitJson() {
-      var obj = {};
-            var elements = form.querySelectorAll( "input, select" );
-            for( var i = 0; i < elements.length; ++i ) {
-                var element = elements[i];
-                var name = element.name;
-                var value = element.value;
-
-                if( name ) {
-                    obj[ name ] = value;
-                }
-            }
-
-         var data = JSON.stringify( obj );
-
-         $.ajax({
-                url: 'http://54.169.143.230:5000/submitform',
-                type: 'post',
-                dataType: 'json',
-                data: data,
-                contentType: 'application/json',
-                success: function (data) {
-                    $('#target').html(data.msg);
-                },
-                data: JSON.stringify(obj)
-
-            });
-    }
-  </script>
 
 </html>
